# zapf-resotool

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  README.md  ci_test.sh  mkosi.build  mkosi.postinst  pyproject.toml  reso_mail.py  setup.cfg
.github/workflows/: poetry.yml  python_black.yml  python_linting.yml  python_tests.yml
.mkosi/: mkosi.debian
mkosi.extra/etc/sysusers.d/: resotool.conf
resotool/: Makefile  create_dummy_resos.py  create_resos.py  manage.py  pylintrc  pytest.ini
resotool/resoapp/: apps.py  models.py  tasks.py  urls.py  views.py
resotool/resoapp/migrations/: 0001_initial.py  0002_auto_20190727_1435.py  0002_auto_20190904_1241.py  0003_auto_20190727_1541.py  0004_auto_20190727_1657.py
resotool/resoapp/static/resoapp/: style.css
resotool/resoapp/templates/resoapp/: base.html  resolution_detail.html  resolution_list.html  resolutionemail_detail.html  resolutionemail_list.html
resotool/resoapp/tests/: test_models.py  test_tasks.py  test_views.py  utils.py
resotool/resotool/: __init__.py  apps.py  celery.py  models.py  settings.py  tasks.py  urls.py  views.py  wsgi.py
resotool/resotool/migrations/: 0001_initial.py  0002_auto_20190904_1241.py
resotool/resotool/static/resotool/: style.css
resotool/resotool/templates/resotool/: base.html  resolution_detail.html  resolution_list.html  resolutionemail_detail.html  resolutionemail_list.html
resotool/resotool/tests/: test_models.py  test_tasks.py  test_views.py
tests/: test_mail.py  test_reso_mail.py
