[tool.poetry]
name = "zapf-resotool"
version = "0.0.1"
description = "A bit of software to manage ZaPF resolutions"
authors = ["Björn Guth <bjoern@fsmpi.rwth-aachen.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
celery = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
