[tool.poetry]
name = "zapf-resotool"
version = "0.0.1"
description = "A bit of software to manage ZaPF resolutions"
authors = ["Björn Guth <bjoern@fsmpi.rwth-aachen.de>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.7"
Django = "^2.2"
celery = "^4.3"
Markdown = "^3.1"
pytest-django = "^3.5"
redis = "^3.2"
django-celery-results = "^1.1"
django-celery-email = "^2.0"
django-enumfield = "^1.5"
psycopg2 = "^2.8"
gunicorn = "^19.9"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
ipython = "^7.7"
toml = "^0.10.0"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest-cov = "^2.7"
coverage = "^4.5"
pylint = "^2.3"
pylint-django = "^2.0"
pre-commit = "^1.20"
mypy = "^0.740.0"
django-stubs = "^1.2"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
